// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericList Renders actions button when 'actions' prop is provided 1`] = `
<div
  className="fd-panel fd-has-margin-m generic-list"
>
  <div
    className="fd-panel__header fd-has-padding-xs"
  >
    <div
      className="fd-panel__head"
    />
    <section>
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <input
                className="control--close"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search..."
                type="text"
                value=""
              />
              <button
                className="fd-button--light sap-icon--search"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                first_entry
              </td>
              <td>
                <div
                  className="fd-popover"
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <button
                        className="fd-button--light sap-icon--vertical-grip"
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                second_entry
              </td>
              <td>
                <div
                  className="fd-popover"
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <button
                        className="fd-button--light sap-icon--vertical-grip"
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericList Renders title and description 1`] = `
<div
  className="fd-panel fd-has-margin-m generic-list"
>
  <div
    className="fd-panel__header fd-has-padding-xs"
  >
    <div
      className="fd-panel__head"
    >
      <h3
        className="fd-panel__title"
      >
        title
      </h3>
    </div>
    <section>
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <input
                className="control--close"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search..."
                type="text"
                value=""
              />
              <button
                className="fd-button--light sap-icon--search"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr />
          </thead>
          <tbody />
        </table>
        <p
          className="sc-cJSrbW gXxzRq"
        >
          There are no items to show
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericList Renders with minimal props 1`] = `
<div
  className="fd-panel fd-has-margin-m generic-list"
>
  <div
    className="fd-panel__header fd-has-padding-xs"
  >
    <div
      className="fd-panel__head"
    />
    <section>
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <input
                className="control--close"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search..."
                type="text"
                value=""
              />
              <button
                className="fd-button--light sap-icon--search"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr />
          </thead>
          <tbody />
        </table>
        <p
          className="sc-cJSrbW gXxzRq"
        >
          There are no items to show
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GenericList Skips rendering actions when 'actions' prop passes skipAction() call 1`] = `
<div
  className="fd-panel fd-has-margin-m generic-list"
>
  <div
    className="fd-panel__header fd-has-padding-xs"
  >
    <div
      className="fd-panel__head"
    />
    <section>
      <div
        className="fd-search-input generic-list-search"
      >
        <div
          className="fd-popover"
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-combobox-control"
            >
              <input
                className="control--close"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search..."
                type="text"
                value=""
              />
              <button
                className="fd-button--light sap-icon--search"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="fd-panel__body"
  >
    <div
      className="fd-panel sc-caSCKo jjNSwx"
    >
      <div
        className="fd-panel__body sc-TOsTZ iphcEB"
      >
        <table
          className="fd-table sc-kgAjT EPChu"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                first_entry
              </td>
            </tr>
            <tr>
              <td>
                second_entry
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
